# compatibility_agent

./: .gitignore  AGENT_DESIGN.md  AGENT_DESIGN_MVP.md  SESSION_NOTES.md  pyproject.toml
adapter-agent/: V0_PIPELINE.md  V1_PIPELINE.md  V2_PIPELINE.md  V3_PIPELINE.md  pyproject.toml
adapter-agent/adapter_agent/: __init__.py  cli.py
adapter-agent/adapter_agent/api/: __init__.py  format_converter.py  gateway.py  protocol_adapter.py  router.py
adapter-agent/adapter_agent/core/: __init__.py  deployer.py  disaster_recovery.py  fixer.py  generator.py  lifecycle.py  matcher.py  orchestrator.py  scanner.py  validator.py
adapter-agent/adapter_agent/monitoring/: __init__.py  alerting.py  dashboard.py  health.py  metrics.py
adapter-agent/adapter_agent/plugins/: __init__.py  base.py
adapter-agent/adapter_agent/plugins/app_integrators/: __init__.py  base_integrator.py  claudebot_integrator.py  langchain_integrator.py  llamaindex_integrator.py
adapter-agent/adapter_agent/plugins/safety_tools/: __init__.py  base_safety_tool.py  guardrails_ai.py  llama_firewall.py  llama_guard.py  nemo_guardrails.py  openguardrails.py
adapter-agent/adapter_agent/training/: README.md  __init__.py  data_collector.py  data_formats.md  dpo_trainer.py  evaluator.py  generate_planner_data.py  generate_tool_data.py  rag_builder.py  sft_trainer.py  tool_trainer.py  train_sft.py
adapter-agent/adapter_agent/training/data/: planner_dpo.jsonl  planner_sft.jsonl  seed_sft.jsonl  seed_tool.jsonl
adapter-agent/adapter_agent/v0/: __init__.py  pipeline.py
adapter-agent/adapter_agent/v1/: __init__.py  pipeline.py
adapter-agent/adapter_agent/v2/: __init__.py  pipeline.py
adapter-agent/adapter_agent/v3/: __init__.py  executor.py  pipeline.py  planner.py
adapter-agent/configs/: accelerate_zero3.yaml  claudebot_protection.yaml  deepspeed_zero3.json  training_4x4090.yaml
adapter-agent/demo/: demo.css  demo.js  demo_result_after.json  demo_result_after_danger.json  demo_result_before.json  demo_result_before_danger.json  deployment_state.json  deployment_state_v3.json  index.html  state.css  state.html  state.js
adapter-agent/examples/claudebot/: README.md  RUN_EXAMPLE.md  main.py  safe_claudebot.py  tools.py
adapter-agent/tests/: __init__.py  conftest.py  test_api.py  test_integrators.py  test_monitoring.py  test_safety_tools.py
guard-adapter/: README.md
guard-adapter/guard_adapter/: cli.py  deployer.py
guard-adapter/guard_adapter/knowledge/compatibility/: safety_tools.yaml
guard-adapter/guard_adapter/knowledge/templates/: claudebot_wrapper.py.j2
guard-adapter/guard_adapter/knowledge/troubleshooting/: common_issues.yaml
guard-adapter/tests/: test_deployer.py
guard_adapter/: __init__.py  cli.py  generator.py  scanner.py
scripts/: capture_demo_result.sh  verify_og_openclaw.sh
tests/: __init__.py  test_generator.py  test_guard_wrapper.py  test_scanner.py
